--- a/M2P03/M2P03.css
+++ b/M2P03/M2P03.css
@@ -54,7 +54,7 @@ main div {
     padding: 20px;
     background-color: #f4f4f4;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-    border: 10 solid transparent;
+    border: 10px solid transparent;
     border-radius: 10px;
     z-index: 1000;
 }
@@ -96,7 +96,7 @@ main div {
 
 .borde-sombra {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-    border: 10 solid transparent;
+    border: 10px solid transparent;
     border-radius: 10px;
     padding: 10px;
 }
