--- a/M2P04/css/style.css
+++ b/M2P04/css/style.css
@@ -30,10 +30,6 @@ body {
     background-color: white;
 }
 
-header {
-    position: sticky;
-}
-
 .logo {
     height: auto;
     width: auto;
@@ -162,10 +158,110 @@ header {
     color: black;
 }
 
+.about-mugen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.about-mugen img {
+    width: 80%;
+    max-width: 400px;
+}
+
+.about-mugen-text {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+}
+
+.about-mugen h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    letter-spacing: -.04em;
+    line-height: 1.3;
+}
+
+.about-mugen h3 {
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: -.04em;
+    margin-bottom: 2rem;
+    color: rgb(134, 134, 134);
+}
+
+.practica4-3 {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0;
+    gap: 1rem;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: auto;
+    padding: 1.2rem;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+}
+
+.contact-form form {
+    width: 80%;
+    margin-top: 2rem;
+}
+
+.campo {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input,
+textarea {
+    padding: 0.8rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    width: 20%;
+    min-width: 6rem;
+    padding: 0.8rem;
+    background-color: rgb(134, 134, 134);
+    ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s
+}
+
+button:hover {
+    background-color: #000000;
+}
+
+
+
 @media screen and (min-width: 800px) {
     html {
         font-size: 18px;
     }
+
+    /* Utilizo el cambio de tamaño de fuente en html para escalar
+     automáticamente la mayoría de los contenidos medidos en "rem" */
 
     .main-header {
         margin: 0 auto;
@@ -176,7 +272,7 @@ header {
     }
 
     .logo {
-        max-width: 250px;
+        max-width: 280px;
     }
 
     .sidebar-nav {
@@ -191,7 +287,7 @@ header {
     .standard-nav ul {
         list-style: none;
         display: flex;
-        gap: 50px;
+        gap: 40px;
     }
 
     .standard-nav li {
@@ -199,7 +295,7 @@ header {
     }
 
     .standard-nav a {
-        font-size: 14px;
+        font-size: 16px;
         text-decoration: none;
         color: black;
         transition: transform 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
@@ -217,12 +313,30 @@ header {
     .main-container {
         margin: 1rem 6rem;
     }
+
+    .about-mugen img {
+    width: 60%;
+
+}
+
+    .practica4-3 {
+        display: grid;
+        gap: 1rem;
+    }
+
+    .p4-3-title {
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
 }
 
 @media screen and (min-width: 1200px) {
     html {
         font-size: 24px;
     }
+
+    /* Utilizo el cambio de tamaño de fuente en html para escalar
+     automáticamente la mayoría de los contenidos medidos en "rem" */
 
     .main-header {
         margin: 0 auto;
@@ -231,6 +345,8 @@ header {
         padding: 0 1rem;
         gap: 0.5rem;
     }
+
+    .main-header 
 
     .logo {
         max-width: 400px;
@@ -274,4 +390,53 @@ header {
     .main-container {
         margin: 1rem 8rem;
     }
+
+    .about-mugen {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        gap: 5rem;
+        height: 233px;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 1rem;
+        margin-bottom: 8rem;
+    }
+
+    .about-mugen img {
+        width: 344px;
+        height: 244px;
+        object-fit: cover;
+        margin-top: 1rem;
+    }
+
+    .about-mugen-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        text-align: left;
+        height: 100%;
+    }
+
+    .about-mugen h2 {
+        font-size: 2.2rem;
+        font-weight: 700;
+        letter-spacing: -0.05em;
+        line-height: 1.2;
+        margin: 0;
+    }
+
+    .about-mugen h3 {
+        font-size: 1.5rem;
+        font-weight: 400;
+        letter-spacing: -0.05em;
+        color: rgb(134, 134, 134);
+        margin: 0;
+    }
+
+    .contact-form {
+        font-size: 18px;
+    }
+
 }
