--- a/M2P05/css/style.css
+++ b/M2P05/css/style.css
@@ -73,7 +73,6 @@ body {
 }
 
 .sidebar-nav ul {
-
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -192,11 +191,66 @@ body {
     color: rgb(134, 134, 134);
 }
 
-.practica4-3 {
+.practica5-2 {
     display: flex;
     flex-direction: column;
     margin: 2rem 0;
     gap: 1rem;
+}
+
+.practica5-3 {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1rem;
+}
+
+.practica5-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+.practica5-4 img {
+    width: 300px;
+    height: 300px;
+}
+
+.practica5-6 {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.practica5-6 table,
+caption,
+th,
+td {
+    text-align: center;
+    border: solid 1px green;
+    gap: 10px;
+}
+
+.practica5-6 caption {
+    font-size: 18px;
+}
+
+.practica5-7 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.practica5-7 h1 {
+    font-size: 20px;
+    color:#333fff;
+}
+
+.practica5-7 h2 {
+    font-size: 15px;
+    color: #B8B9C4;
 }
 
 .contact-form {
@@ -209,7 +263,7 @@ body {
     background-color: #f4f4f4;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
+
 }
 
 .contact-form form {
@@ -241,7 +295,6 @@ button {
     min-width: 6rem;
     padding: 0.8rem;
     background-color: rgb(134, 134, 134);
-    ;
     color: white;
     border: none;
     border-radius: 5px;
@@ -315,19 +368,19 @@ button:hover {
     }
 
     .about-mugen img {
-    width: 60%;
+        width: 60%;
+    }
 
-}
-
-    .practica4-3 {
+    .practica5-2 {
         display: grid;
         gap: 1rem;
     }
 
-    .p4-3-title {
+    .p5-2-title {
         grid-column-start: 1;
         grid-column-end: 4;
     }
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -339,52 +392,21 @@ button:hover {
      automáticamente la mayoría de los contenidos medidos en "rem" */
 
     .main-header {
-        margin: 0 auto;
         max-width: 1300px;
         min-width: 600px;
-        padding: 0 1rem;
         gap: 0.5rem;
     }
 
-    .main-header 
-
-    .logo {
+    .main-header .logo {
         max-width: 400px;
     }
 
-    .sidebar-nav {
-        display: none;
-    }
-
-    .standard-nav {
-        background-color: white;
-        display: flex;
-    }
-
     .standard-nav ul {
-        list-style: none;
-        display: flex;
         gap: 50px;
-    }
-
-    .standard-nav li {
-        display: flex;
     }
 
     .standard-nav a {
         font-size: 18px;
-        text-decoration: none;
-        color: black;
-        transition: transform 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
-    }
-
-    .standard-nav a:hover {
-        transform: scale(1.05);
-        text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .menu-button {
-        display: none;
     }
 
     .main-container {
