--- a/M2P02/M2P02.css
+++ b/M2P02/M2P02.css
@@ -20,7 +20,7 @@ header {
 }
 
 #art1 {
-    font-size: 16;
+    font-size: 16px;
     text-align: justify;
     color: red;
 }
@@ -31,7 +31,7 @@ hr {
 }
 
 #art2 {
-    font-size: 12;
+    font-size: 12px;
     font-weight: bold;
     font-style: italic;
     color: darkslateblue;
